First refactorying pass