@@ -1,14 +1,14 @@
 package ourstory.commands;
 
+import java.util.List;
 import org.bukkit.Bukkit;
 import org.bukkit.entity.Cow;
 import org.bukkit.entity.Mob;
 import org.bukkit.entity.Player;
-import com.google.common.collect.ImmutableList;
 import io.papermc.paper.command.brigadier.BasicCommand;
 import io.papermc.paper.command.brigadier.CommandSourceStack;
 import ourstory.bosses.HolyCow;
-import ourstory.bosses.IBoss;
+import ourstory.bosses.Boss;
 
 public class MobGoalCommand implements BasicCommand {
 	@Override
@@ -18,7 +18,7 @@ public class MobGoalCommand implements BasicCommand {
 		}
 		Player sender = (Player) cmdSource.getExecutor();
 		Mob holyCowMob = (Mob) sender.getWorld().spawn(sender.getLocation(), Cow.class);
-		IBoss boss = new HolyCow(holyCowMob, ImmutableList.of(sender));
+		Boss boss = new HolyCow(holyCowMob, List.of(sender), 0);
 		boss.registerGoals(Bukkit.getServer().getMobGoals());
 	}
 }
